
8.11  2018-12-30
  - Added EXPERIMENTAL support for SameSite cookies to better protect
    Mojolicious applications from CSRF attacks. (dylanwh, sri)
  - Added EXPERIMENTAL samesite attributes to Mojo::Cookie::Response and
    Mojolicious::Cookies. (dylanwh, sri)
  - Added lstat method to Mojo::File. (Grinnz)

8.10  2018-12-18
  - Added reset event to Mojo::IOLoop.
  - Added limit argument to split method in Mojo::ByteStream. (s1037989)

8.09  2018-12-02
  - Added touch method to Mojo::File.
  - Added max_depth option to list_tree method in Mojo::File.

8.08  2018-11-26
  - Added stat method to Mojo::File.

8.07  2018-11-16
  - Fixed a bug that caused debug log messages to be generated for static files.
  - Fixed a bug in Mojo::Server::Morbo that prevented the before_server_start
    hook from getting emitted.

8.06  2018-11-07
  - Added support for progress updates to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress method to Mojo::IOLoop::Subprocess. (karjala)
  - Added progress event to Mojo::IOLoop::Subprocess. (karjala)
  - Improved debug, error, fatal, info and warn methods in Mojo::Log to accept
    closures to generate log messages on demand. So expensive code for debugging
    can be deactivated easily in production.
  - Improved Mojo::Log to use the time format "2018-11-08 14:25:5.76027" and to
    include the process id in log messages.
  - Improved Mojolicious performance by up to 10% with more efficient logging.
  - Fixed a problem with the built in templates where an image was missing.

8.05  2018-10-25
  - Deprecated Mojolicious::Plugin::PODRenderer in favor of alternatives from
    CPAN.
  - Deprecated Mojo::Home::mojo_lib_dir.
  - Replaced continue, flash, redirect_to, respond_to and validation methods in
    Mojolicious::Controller with helpers in Mojolicious::Plugin::DefaultHelpers.
  - Updated FAQ with a warning not to use Perl 5.10.x and 5.12.x with
    Mojolicious.

8.04  2018-10-21